--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 
   broker:
     image: confluentinc/cp-kafka:7.3.0
-    container_name: broker
+    container_name: kafka
     ports:
       - "9092:9092"
     depends_on:
@@ -25,28 +25,33 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.8.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     container_name: elasticsearch
-    ports:
-      - "9200:9200"
-      - "9300:9300"
     environment:
       - node.name=elasticsearch
-      - cluster.name=docker-cluster
-      - discovery.seed_hosts=elasticsearch
+      - discovery.type=single-node
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "discovery.type=single-node"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - 9200:9200
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    networks:
+      - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.8.1
+    image: docker.elastic.co/kibana/kibana:7.10.1
     container_name: kibana
-    ports:
-      - "5601:5601"
-    depends_on:
-      - elasticsearch
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - 5601:5601
+    networks:
+      - elastic
 
   bitcoin-producer:
     build:
@@ -62,6 +67,11 @@ services:
       - ELASTICSEARCH_PORT=9200
       - ELASTICSEARCH_INDEX=crypto_data_index
 
+volumes:
+  esdata:
+
+networks:
+  elastic:
 
 # ---
 # version: '3'
