--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+certifi==2023.5.7
+charset-normalizer==3.1.0
 confluent-kafka==2.1.1
-elasticsearch==8.8.0
+elastic-transport==8.4.0
+elasticsearch==7.12.0
+idna==3.4
 requests==2.31.0
+urllib3==1.26.16
